@@ -14,16 +14,12 @@ Tick locating
 
 The Locator class is the base class for all tick locators.  The
 locators handle autoscaling of the view limits based on the data
-limits, and the choosing of tick locations.  The most generally useful
+limits, and the choosing of tick locations.  A useful semi-automatic
 tick locator is MultipleLocator.  You initialize this with a base, eg
 10, and it picks axis limits and ticks that are multiples of your
-base.  The class AutoLocator contains a MultipleLocator instance, and
-dynamically updates it based upon the data and zoom limits.  This
-should provide much more intelligent automatic tick locations both in
-figure creation and in navigation than in prior versions of
-matplotlib.
+base.
 
-The basic generic  locators are
+The Locator subclasses defined here are
 
   * NullLocator     - No ticks
 
@@ -38,8 +34,14 @@ The basic generic  locators are
   * MultipleLocator - ticks and range are a multiple of base;
                       either integer or float
 
-  * AutoLocator     - choose a MultipleLocator and dyamically reassign
+  * OldAutoLocator  - choose a MultipleLocator and dyamically reassign
                       it for intelligent ticking during navigation
+
+  * MaxNLocator     - finds up to a max number of ticks at nice
+                      locations
+
+  * AutoLocator     - MaxNLocator with simple defaults. This is the
+                      default tick locator for most plotting.
 
 There are a number of locators specialized for date locations - see
 the dates module
@@ -116,7 +118,7 @@ from numerix import absolute, arange, array, asarray, Float, floor, log, \
 from matplotlib.numerix.mlab import amin, amax, std, mean
 from matplotlib.mlab import frange
 from cbook import strip_math
-from transforms import nonsingular
+from transforms import nonsingular, Value, Interval
 
 class TickHelper:
 
@@ -136,6 +138,18 @@ class TickHelper:
 
     def set_data_interval(self, interval):
         self.dataInterval = interval
+
+    def set_bounds(self, vmin, vmax):
+        '''
+        Set dataInterval and viewInterval from numeric vmin, vmax.
+
+        This is for stand-alone use of Formatters and/or
+        Locators that require these intervals; that is, for
+        cases where the Intervals do not need to be updated
+        automatically.
+        '''
+        self.dataInterval = Interval(Value(vmin), Value(vmax))
+        self.viewInterval = Interval(Value(vmin), Value(vmax))
 
 class Formatter(TickHelper):
     """
